# RDC-Agent-Tools

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  pytest.ini  rdx.bat  temp_head.txt
cli/: run_cli.py
docs/: README.md  agent-integration.md  agent-model.md  android-remote-cli-smoke-prompt.md  compatibility-notes.md  configuration.md  doc-governance.md  fixture-strategy.md  install.md  public-contract.md  quickstart.md  rdx-native-agent-playbook.md  release-baseline.md  release-notes.md  session-model.md  stability.md  tool-reference.md  tools.md  troubleshooting.md
mcp/: run_mcp.py
policy/: README.md
rdx/: __init__.py  cli.py  config.py  context_snapshot.py  io_utils.py  models.py  preview_window.py  progress.py  python_runtime.py  remote_bootstrap.py  runtime_bootstrap.py  runtime_materializer.py  runtime_paths.py  runtime_requirements.py  runtime_state.py  runtime_worker.py  runtime_worker_state.py  server.py  server_runtime.py  timeout_policy.py  tool_router.py
scripts/: README.md  arg_test.ps1  build_offline_replay_detailed_report.py  check_markdown_health.py  cleanup_workspace.py  generate_release_checksums.py  generate_tool_reference.py  native_smoke.py  package_release.py  package_runtime.py  preview_geometry_smoke.py  rdx_bat_command_smoke.py  rdx_bat_launcher.ps1  rdx_install.ps1  release_gate.py  run_smoke_196_dual_sample.py  smoke_cli.sh  smoke_report_aggregator.py  tool_contract_check.py  verify_release_package.py
spec/: build_catalog.py  doc_extracted.txt  runtime_mode_truth.json  tool_catalog.json  tool_catalog_196.json  tool_catalog_overlay.json  validate_catalog.py
tests/: conftest.py  test_capture_open_file_semantics.py  test_cli_call_args.py  test_cli_capture_open.py  test_cli_daemon_status.py  test_cli_vfs.py  test_context_cli_boundary.py  test_context_owner_baton.py  test_context_snapshot.py  test_daemon_client.py  test_docs_and_fixtures.py  test_io_utils.py  test_layout.py  test_package_runtime.py  test_pipeline_api_selection.py  test_preview.py  test_python_runtime.py  test_rdx_bat_noninteractive.py  test_release_gate.py  test_release_package.py  test_remote_bootstrap.py  test_remote_runtime.py  test_runtime_bootstrap.py  test_vfs.py  (+10 more)
(+60 files in other folders)
