[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdx-tools"
version = "1.0.0"
description = "Local-first RenderDoc tools runtime for CLI, MCP, and GPU debugging hosts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RDX" }]
dependencies = [
  "aiofiles>=23.0",
  "jinja2>=3.1",
  "mcp>=1.0",
  "numpy>=1.24",
  "Pillow>=10.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["rdx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "intermediate", "binaries"]
markers = [
  "unit: fast behavior/unit checks that do not require a capture fixture",
  "contract: contract and schema checks against catalog or transport adapters",
  "fixture_integration: checks that require a first-party capture fixture",
  "gpu_live: checks that require a live RenderDoc/GPU environment",
]
