[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdx-tools"
version = "1.0.0"
description = "Local-first RenderDoc tools runtime for CLI and GPU debugging hosts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "RDX" }]
dependencies = [
  "aiofiles>=23.0",
  "jinja2>=3.1",
  "numpy>=1.24",
  "Pillow>=10.0",
  "pydantic>=2.0",
]

[project.scripts]
rdx = "rdx.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["rdx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "intermediate", "binaries"]
markers = [
  "unit: fast behavior/unit checks that do not require a capture sample",
  "contract: contract and schema checks against catalog or transport adapters",
  "fixture_integration: checks that require an explicit external capture sample",
  "gpu_live: checks that require a live RenderDoc/GPU environment",
]
